--- a/package.json
+++ b/package.json
@@ -7,7 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon",
+    "ember",
+    "ember.js",
+    "ember-cli",
+    "mapbox",
+    "mapbox.js"
   ],
   "author": "Chris Santero",
   "license": "MIT",
