--- a/package.json
+++ b/package.json
@@ -1,10 +1,40 @@
 {
   "name": "ember-cli-mapbox",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "ember-cli addon adding support for mapbox.js",
-  "main": "index.js",
+  "directories": {
+    "doc": "doc",
+    "test": "tests"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "ember server",
+    "build": "ember build",
+    "test": "ember test"
+  },
+  "repository": "",
+  "engines": {
+    "node": ">= 0.10.0"
+  },
+  "author": "Chris Santero, Ben Holmes",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/bdvholmes/ember-cli-mapbox.git"
+  },
+  "license": "MIT",
+  "devDependencies": {
+    "broccoli-asset-rev": "^2.0.0",
+    "ember-cli": "0.2.0",
+    "ember-cli-app-version": "0.3.2",
+    "ember-cli-babel": "^4.0.0",
+    "ember-cli-content-security-policy": "0.3.0",
+    "ember-cli-dependency-checker": "0.0.8",
+    "ember-cli-htmlbars": "0.7.4",
+    "ember-cli-ic-ajax": "0.1.1",
+    "ember-cli-inject-live-reload": "^1.3.0",
+    "ember-cli-qunit": "0.3.9",
+    "ember-cli-uglify": "1.0.1",
+    "ember-data": "1.0.0-beta.15",
+    "ember-export-application-global": "^1.0.2"
   },
   "keywords": [
     "ember-addon",
@@ -14,15 +44,7 @@
     "mapbox",
     "mapbox.js"
   ],
-  "author": "Chris Santero",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/csantero/ember-cli-mapbox.git"
-  },
-  "dependencies": {
-    "broccoli-merge-trees": "^0.1.4",
-    "broccoli-static-compiler": "^0.1.4"
-  },
-  "devDependencies": {}
+  "ember-addon": {
+    "configPath": "tests/dummy/config"
+  }
 }
